[tool.poetry]
name = "wifi-lib"
version = "0.1.0"
description = "Library for implementing PHY and MAC layers of Wi-Fi 802.11-2020 standard."
authors = ["Даниил Шембель <dashembel@miem.hse.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
plotly = "^5.3"
pandas = "^1.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0"
pre-commit = "^2.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
